syntax = "proto3";

package v1.post;

option go_package = "github.com/DeliverBle/deliverble-recording-microservice";

service Post {
  rpc ListPostsByUserId(ListPostsByUserIdRequest) returns (ListPostsByUserIdResponse);
  rpc ListAllPosts(ListAllPostsRequest) returns (ListAllPostsResponse);
}

message PostMessage {
  string post_id = 1;
  string author = 2;
  string title = 3;
  string body = 4;
  repeated string tags = 5;
}

message ListPostsByUserIdRequest {
  string user_id = 1;
}

message ListPostsByUserIdResponse {
  repeated PostMessage post_messages = 1;
}

message ListAllPostsRequest {}

message ListAllPostsResponse {
  repeated PostMessage post_messages = 1;
}
