syntax = "proto3";

package prod.recording;

option go_package = "github.com/DeliverBle/deliverble-recording-microservice";

service recording_task {
  rpc UploadRecording (UploadRecordingRequest) returns (UploadRecordingResponse) {}
  rpc UploadRecordingV2 (UploadRecordingRequest) returns (UploadRecordingResponse) {}
}

// UploadRecordingRequest wrapped with byte data
message UploadRecordingRequest {
  bytes recording = 1;
}

message UploadRecordingResponse {
  bool result = 1;
  string url = 2;
  string key = 3;
}
